comienzo a cambiar la pagina Contacto, para que sea realmente practica

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -49,36 +49,23 @@
         <h2>Contacto</h2>
         <p class="col-md-8 offset-md-2 col-lg-6 offset-lg-3">Si tenés alguna pregunta, querés mas informacion sobre las
           clases de piano & guitarra o te interesa tener música en
-          vivo en algun evento, deja tu mensaje para ponerte en contacto conmigo.</p>
+          vivo en algun evento, escribime a alguna de mis redes sociales.</p>
       </div>
     </section>
 
-    <section id="formulario" class="seccion2 mensaje container-fluid">
-      <div class="container-md text-md-start">
-        <form action="../contacto.php" method="post">
+    <section id="" class="seccion2 container-fluid">
+      <div class="row">
+        <div class="col-12 col-md-4">
+          <h2>Instagram</h2>
+        </div>
 
-          <div class="row">
-            <div class="mb-3 col-md-4 offset-md-2">
-              <label for="formNombre" class="form-label">Nombre y Apellido</label>
-              <input type="text" name="name" class="form-control" id="formNombre" required="required" placeholder="Nombre y Apellido">
-            </div>
-            <div class="mb-3 col-12 col-md-4">
-              <label for="formEmail" class="form-label">Correo electronico</label>
-              <input type="email" name="email" class="form-control" id="formEmail" required="required" placeholder="name@example.com">
-            </div>
-          </div>
+        <div class="col-12 col-md-4">
+          <h2>eMail</h2>
+        </div>
 
-          <div class="row">
-            <div class="mb-3 col-12 col-md-8 offset-md-2">
-              <label for="formMensaje" class="form-label">Mensaje</label>
-              <textarea  name="message" class="form-control" id="formMensaje" rows="3"></textarea>
-            </div>
-          </div>
-          
-          <div class="row">
-            <button type="submit" class="btn btn-light col-2 offset-5 col-md-1 offset-md-9">Enviar</button>
-          </div>
-        </form>
+        <div class="col-12 col-md-4">
+          <h2>Wapp</h2>
+        </div>
       </div>
     </section>
 
