correccion de detalles seccion didactica

--- a/pages/material-didactico.html
+++ b/pages/material-didactico.html
@@ -65,7 +65,7 @@
 
             <div class="row pt-3">
                 <div class="col-12 col-md-4 offset-md-2 col-lg-3 offset-lg-2">
-                    <a href="../pdf/CUADERNILLO GUITARRA - Acordes, Escalas, Arpegios.pdf">
+                    <a href="../pdf/Francisco Afione - Guitarra - Armonia.pdf">
                         <img src="../img/materialDidactico/guitarra-armonia.png" class="img-thumbnail d-block mx-auto d-md-none" alt="Cuadernillo de guitarra, armonia.">
                         <div class="box-hover">
                             <img src="../img/materialDidactico/guitarra-armonia-md.png" class="img-thumbnail d-none d-md-block" alt="Cuadernillo de guitarra, armonia.">
