--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -56,7 +56,7 @@
     <section id="" class="seccion2 container-fluid">
       <div class="row">
         <div class="col-12 col-md-4">
-          <h2>Instagram</h2>
+          <h2 href="https://www.instagram.com/franciscoafione/">Instagram</h2>
         </div>
 
         <div class="col-12 col-md-4">
