Estilos de links en seccion contacto

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -53,10 +53,12 @@
       </div>
     </section>
 
-    <section id="" class="seccion2 container-fluid">
+    <section id="contacto-metodos" class="seccion2 container-fluid">
       <div class="row">
         <div class="col-12 col-md-4">
-          <h2 href="https://www.instagram.com/franciscoafione/">Instagram</h2>
+          <h2>
+            <a href="https://www.instagram.com/franciscoafione/">Instagram</a>
+          </h2>
         </div>
 
         <div class="col-12 col-md-4">
